--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,21 @@
     <style name="Base.Theme.ArtlyMobile" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:fontFamily">@font/inder</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">#CFCFCF</item>
+
+        <item name="materialButtonStyle">@style/Theme.ArtlyMobile.Button</item>
     </style>
 
-    <style name="Theme.ArtlyMobile" parent="Base.Theme.ArtlyMobile" />
+    <style name="Theme.ArtlyMobile.Text" parent="Base.Theme.ArtlyMobile">
+    </style>
+
+    <style name="Theme.ArtlyMobile.Button" parent="@style/Widget.AppCompat.Button">
+        <item name="android:background">@drawable/button_background</item>
+        <item name="backgroundTint">@null</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
 </resources>
