--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -60,7 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:text="Username"
+                android:text="Username (required)"
                 android:textSize="16sp"/>
 
             <EditText
@@ -81,7 +81,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:text="Email"
+                android:text="Full Name"
+                android:textSize="16sp"/>
+
+            <EditText
+                android:id="@+id/et_register_full_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/input_field_background"
+                android:paddingVertical="5dp"
+                android:paddingHorizontal="10dp"
+                android:layout_marginBottom="15dp"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:inputType="text"
+                android:hint="full name"
+                android:autofillHints="name"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:text="Email (required)"
                 android:textSize="16sp"/>
 
             <EditText
@@ -102,7 +123,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
-                android:text="Password"
+                android:text="Password (required)"
                 android:textSize="16sp"/>
 
             <EditText
