--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.ArtlyMobile" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimaryDark">@color/black</item>
         <item name="android:fontFamily">@font/inder</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorHint">#CFCFCF</item>
