--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -115,6 +115,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_product_details_stock"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -136,6 +137,41 @@
                 </LinearLayout>
 
             </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_product_details_quantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_product_details_decrement_quantity"
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:text="-"/>
+
+            <EditText
+                android:id="@+id/et_product_details_quantity"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
+                android:gravity="center"
+                android:paddingVertical="5dp"
+                android:background="@drawable/input_field_background"
+                android:inputType="number"
+                android:textColor="@color/white"
+                android:text="1"
+                android:hint="Qty"/>
+
+            <Button
+                android:id="@+id/btn_product_details_increment_quantity"
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:text="+"/>
 
         </LinearLayout>
 
