--- a/app/src/main/res/layout/item_cart_item.xml
+++ b/app/src/main/res/layout/item_cart_item.xml
@@ -5,68 +5,77 @@
     android:orientation="horizontal"
     android:paddingVertical="10dp"
     android:paddingRight="10dp"
-    android:gravity="center"
-    android:background="@color/black">
+    android:gravity="center">
 
     <ImageView
         android:id="@+id/iv_item_cart_item_image"
-        android:layout_width="90dp"
-        android:layout_height="120dp"
+        android:layout_width="120dp"
+        android:layout_height="160dp"
         android:layout_marginRight="20dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_item_cart_item_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
+            android:text="Product Name"/>
+
+        <TextView
+            android:id="@+id/tv_item_cart_item_price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/primary"
+            android:text="Product Price"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tv_item_cart_item_name"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Product Name"/>
+                android:textSize="12sp"
+                android:text="Stock: "/>
 
             <TextView
-                android:id="@+id/tv_item_cart_item_price"
-                android:layout_width="match_parent"
+                android:id="@+id/tv_item_cart_item_stock"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/primary"
-                android:text="Product Price"/>
+                android:textSize="12sp"
+                android:text="Product Stock"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:orientation="horizontal">
+        </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="12sp"
-                    android:text="Stock: "/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
+            android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/tv_item_cart_item_stock"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/primary"
-                    android:textSize="12sp"
-                    android:text="Product Stock"/>
-
-            </LinearLayout>
-            
             <Button
                 android:id="@+id/btn_cart_item_details"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
+                android:layout_marginRight="10dp"
                 android:textAllCaps="false"
                 android:text="Details"/>
+
+            <Button
+                android:id="@+id/btn_cart_item_remove"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:backgroundTint="@color/red"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:text="Remove"/>
 
         </LinearLayout>
 
