--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -77,7 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:text="balance : "/>
+                android:text="Balance : "/>
 
             <TextView
                 android:id="@+id/tv_profile_balance"
@@ -90,6 +90,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/topup_btn_profile"
             android:layout_width="144sp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
