--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,6 +24,12 @@
         tools:layout="@layout/fragment_cart" />
 
     <fragment
+        android:id="@+id/navigation_transactions"
+        android:name="com.mobprog.artlymobile.view.TransactionsFragment"
+        android:label="@string/title_transaction"
+        tools:layout="@layout/fragment_transactions"/>
+
+    <fragment
         android:id="@+id/navigation_profile"
         android:name="com.mobprog.artlymobile.view.ProfileFragment"
         android:label="@string/title_profile"
